--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,9 @@ jobs:
           
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
+
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
         
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
