--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,15 @@ jobs:
       - name: Execute Gradle build
         run: ./gradlew build
         
+      - name: Get Branch
+        id: branch
+        run: echo "git_branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_BRANCH
+
+      - name: Get Hash
+        id: hash
+        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_HASH
+        
       - uses: actions/upload-artifact@v3
         with:
-          name: "MikChanNoChat-${{ steps.vars.outputs.branch }}-${{ steps.vars.outputs.sha_short }}"
+          name: "MikChanNoChat-${{ env.branch }} ${{ env.hash }}"
           path: build/libs
