--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Java Build
 
 on: [push]
 
@@ -27,5 +27,5 @@ jobs:
                 
       - uses: actions/upload-artifact@v3
         with:
-          name: "MikChanNoChat-${{ env.name }}"
+          name: "MikChanNoChat"
           path: build/libs
