--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Java Build
+name: Java CI
 
 on: [push]
 
@@ -29,12 +29,3 @@ jobs:
         with:
           name: "MikChanNoChat"
           path: build/libs
-
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
-          files: |
-            LICENSE
-            *.jar
-
