--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,25 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.7.0'
+    id 'maven-publish'
 }
 
 group = 'dev.mikchan'
 version = '0.0.1'
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/MikChanNoPlugins/Chat"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+}
+
 
 repositories {
     mavenCentral()
