--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    permissions: 
+      contents: read
+      packages: write 
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
