--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,12 +6,8 @@ on:
       - "v*"
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
-
-    permissions: 
-      contents: read
-      packages: write 
 
     steps:
       - uses: actions/checkout@v3
@@ -39,6 +35,26 @@ jobs:
           files: |
             LICENSE
             build/libs/*.jar
+
+  publish:
+    runs-on: ubuntu-latest
+
+    permissions: 
+      contents: read
+      packages: write 
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
 
       - name: Publish package
         uses: gradle/gradle-build-action@v2
