--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ authors: [ 'George Endo (MikChan / wtlgo)' ]
 description: A very simple chat plugin
 website: https://github.com/MikChanNoPlugins
 
-prefix: MCnoChat
+prefix: MCnChat
 main: dev.mikchan.chat.Chat
 api-version: 1.16
 
@@ -53,7 +53,6 @@ permissions:
     default: op
   mcn.chat.colors:
     default: op
-
 
 libraries:
   - org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.0
