--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.7.0'
+    id 'org.jetbrains.dokka' version "1.6.21"
     id 'maven-publish'
 }
 
 group = 'dev.mikchan'
-version = '0.0.11'
+version = '0.0.12'
 
 publishing {
     repositories {
@@ -62,6 +63,9 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
+
+    withSourcesJar()
+    withJavadocJar()
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -78,13 +82,19 @@ processResources {
         expand props
     }
 }
+
 compileKotlin {
     kotlinOptions {
         jvmTarget = '1.8'
     }
 }
+
 compileTestKotlin {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+}
+
+dokkaHtml {
+    outputDirectory.set(file("${buildDir}/dokka"))
 }
