--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,30 +10,30 @@ localRadius: 100
 # If `enableLocal` is true, this prefix should be put
 # in front of messages user wants to send globally (e.g. "!Hello, everyone")
 # If `enableLocal` is false, this does nothing
-globalPrefix: "!"
+globalPrefix: !
 
 # A template for local messages
 # :player: - the username of the player who sent the message
 # :message: - the message itself
-localTemplate: '<:player:> :message:'
+localTemplate: <:player:> :message:
 
 # A template for global messages
 # :player: - the username of the player who sent the message
 # :message: - the message itself
-globalTemplate: '<:player:> :message:'
+globalTemplate: <:player:> :message:
 
 # A template for a private message
 # :player_from: - the username of the player who sent the message
 # :player_to: - the username of the player who receives the message
 # :message: - the message itself
-privateTemplate: '<:player_from: to :player_to:> :message:'
-consoleTemplate: '<CONSOLE to :player_to:> :message:'
+privateTemplate: <:player_from: to :player_to:> :message:
+consoleTemplate: <CONSOLE to :player_to:> :message:
 
 # If PAPI is present, this field will be used to replace :player:
-playerTemplate: '%player_name%'
+playerTemplate: %player_name%
 
 # If PAPI is present, this field will be used to replace :player_from:
-fromTemplate: '%player_name%'
+fromTemplate: %player_name%
 
 # If PAPI is present, this field will be used to replace :player_to:
-toTemplate: '%player_name%'
+toTemplate: %player_name%
