--- a/build.gradle
+++ b/build.gradle
@@ -9,30 +9,6 @@ plugins {
 group = 'dev.mikchan.mcnp'
 version = '1.0.3'
 
-publishing {
-    repositories {
-        maven {
-            name = "GitHub"
-            url = "https://maven.pkg.github.com/MikChanNoPlugins/Chat"
-            credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
-            }
-        }
-    }
-
-    publications {
-        gpr(MavenPublication) {
-            groupId = group
-            artifactId = 'chat'
-            // version = version
-
-            from(components.java)
-        }
-    }
-}
-
-
 repositories {
     mavenCentral()
 
@@ -114,10 +90,38 @@ javadocJar {
 }
 
 shadowJar {
+    archiveClassifier.set(null)
+
     dependencies {
         include(dependency('org.bstats:bstats-bukkit'))
         include(dependency('org.bstats:bstats-base'))
     }
 
     relocate "org.bstats", "dev.mikchan.mcnp.chat.bstats"
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHub"
+            url = "https://maven.pkg.github.com/MikChanNoPlugins/Chat"
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+
+    publications {
+        gpr(MavenPublication) {
+            groupId = group
+            artifactId = 'chat'
+
+            from components.java
+
+            artifact jar
+            artifact javadocJar
+            artifact sourcesJar
+        }
+    }
 }
