--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,6 @@
 name: Java CI
 
-on: [push]
+on: [ push ]
 
 jobs:
   build:
@@ -13,24 +13,27 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      - name: Get Commit Data
+        id: commit
+        uses: pr-mpt/actions-commit-hash@v1
+
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Change wrapper permissions
+      - name: Change Wrapper Permissions
         run: chmod +x ./gradlew
 
-      - name: Setup Gradle
+      - name: Gradle Build
         uses: gradle/gradle-build-action@v2
-
-      - name: Execute Gradle Shaded Build
-        run: ./gradlew shadowJar
-
-      - id: commit
-        uses: pr-mpt/actions-commit-hash@v1
+        with:
+          arguments: shadowJar --scan
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: dev-${{ steps.commit.outputs.short }}
 
       - uses: actions/upload-artifact@v3
         with:
-          name: MikChanNoChat-${{ steps.commit.outputs.short }}.zip
+          name: MikChanNoChat-dev-${{ steps.commit.outputs.short }}.zip
           path: |
             build/libs/
             LICENSE.txt
