--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.10'
-    id 'org.jetbrains.dokka' version "1.7.10"
+    id 'org.jetbrains.kotlin.jvm' version '1.8.10'
+    id 'org.jetbrains.dokka' version "1.7.20"
     id 'maven-publish'
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
@@ -40,15 +40,15 @@ dependencies {
 
     compileOnly 'me.clip:placeholderapi:2.10.9'
 
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.10'
     compileOnly 'dev.dejvokep:boosted-yaml-spigot:1.3'
 
 
-    implementation "org.bstats:bstats-bukkit:3.0.0"
-    shadow "org.bstats:bstats-bukkit:3.0.0"
+    implementation "org.bstats:bstats-bukkit:3.0.1"
+    shadow "org.bstats:bstats-bukkit:3.0.1"
 
-    implementation "org.bstats:bstats-bukkit:3.0.0"
-    shadow "org.bstats:bstats-base:3.0.0"
+    implementation "org.bstats:bstats-bukkit:3.0.1"
+    shadow "org.bstats:bstats-base:3.0.1"
 }
 
 def targetJavaVersion = 8
