--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,7 @@ shadowJar {
         include(dependency('org.bstats:bstats-base'))
     }
 
-    relocate "org.bstats", "dev.mikchan.mcnp.chat.bstats"
+    relocate "org.bstats", "dev.mikchan.mcnp.chat.shadow.org.bstats"
 }
 
 publishing {
