--- a/build.gradle
+++ b/build.gradle
@@ -35,13 +35,14 @@ repositories {
     }
 
     maven {
-        name = 'papermc'
-        url = 'https://repo.papermc.io/repository/maven-public/'
+        name = 'sonatype'
+        url = 'https://oss.sonatype.org/content/repositories/snapshots'
     }
 }
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.19.3-R0.1-SNAPSHOT'
+    compileOnly 'net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT'
 
     compileOnly 'me.clip:placeholderapi:2.10.9'
 
@@ -78,7 +79,12 @@ processResources {
     def props = [version: version]
     inputs.properties props
     filteringCharset 'UTF-8'
+
     filesMatching('plugin.yml') {
+        expand props
+    }
+
+    filesMatching('bungee.yml') {
         expand props
     }
 }
