--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.19.3-R0.1-SNAPSHOT'
+    compileOnly 'io.papermc.paper:paper-api:1.19.3-R0.1-SNAPSHOT'
 
     compileOnly 'me.clip:placeholderapi:2.10.9'
 
